# Binocular

./: .dockerignore  .gitignore  README.md  project-instructions.md  pyproject.toml
.github/: sddp-config.md
.github/agents/: product-manager.md
backend/: __init__.py
backend/_modules/: _mock_module.py
backend/scripts/: seed_mock_data.py
backend/src/: config.py  main.py
backend/src/api/: __init__.py  dependencies.py  exception_handlers.py  middleware.py
backend/src/db/: __init__.py  connection.py  migration_runner.py
backend/src/engine/: __init__.py  executor.py  http_client.py  loader.py  protocol.py  validator.py
backend/src/models/: __init__.py  app_config.py  check_history.py  check_result.py  device.py  device_type.py  extension_module.py  validation_result.py
backend/src/repositories/: __init__.py  app_config_repo.py  check_history_repo.py  device_repo.py  device_type_repo.py  (+1 more)
backend/tests/: conftest.py  test_connection.py  test_migration_runner.py  test_version_compare.py
docs/: binocular-product-brief.md  mockup.jsx  tech-context.md
frontend/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/tests/: setup.ts  test-utils.tsx
specs/00001-db-schema-models/: .completed  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/00002-inventory-api/: .completed  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/00003-devices-ui/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/00004-add-device-model/: .completed  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/00005-dummy-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/00006-module-validation-engine/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/00007-module-management/: .qc-passed  analysis-report.md  manual-test.md  plan.md  qc-report.md  quickstart.md  research.md  spec.md  tasks.md
(+113 files in other folders)
