[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "binocular-backend"
version = "0.1.0"
description = "Binocular backend data layer"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "pydantic==2.11.7",
  "aiosqlite==0.21.0",
  "packaging==25.0",
  "structlog==25.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "ruff==0.13.1",
  "mypy==1.18.2",
]

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = "^frontend/"
